updated fontaweome src, resolved spacing and naming issue with the calendar container. Implemented fp on the projects table, rough style for header laid out so far

--- a/src/components/history/History.css
+++ b/src/components/history/History.css
@@ -14,14 +14,12 @@
 }
 
 .calendar-container {
-    background-color: tomato;
     width: 25vw;
     height: 80%;
 }
 
 .executions-container {
     height: 100%;
-    background-color: palegoldenrod;
 }
 
 .projects-container {
@@ -35,3 +33,4 @@
     height: 100%;
     background-color: slateblue;
 }
+
