--- a/src/elements/calendar/Calendar.css
+++ b/src/elements/calendar/Calendar.css
@@ -14,6 +14,5 @@
 
 .days-display-container {
     width: 100%;
-    height: 100%;
-    background-color: white;
+    height: 30vh;
 }
